Update and rename 정연.cpp to 정연.md

--- a/Second/1743/정연.md
+++ b/Second/1743/정연.md
@@ -1,10 +1,14 @@
-//백준1743 음식물피하기                                                            
+# [1743] 음식물 찌꺼기
+
+### 풀이(코드)
+
+```cpp
 #include <iostream>
 #include <vector>
 #include <algorithm>
 using namespace std;
  
-int N, M, K;
+
 int map[102][102];
 bool visited[102][102];
 int dy[] = { 0,0,-1,1 };
@@ -31,15 +35,16 @@ void DFS(int y, int x) {
  
  
 int main() {
-    cin >> N >> M >> K;
-    for(int i=0;i i<= K ; i++){
+		int n,m,k;
+    cin >> n >> m >> k;
+    for(int i=0;i i<= k ; i++){
         int r, c;
         cin >> r >> c;
         map[r][c] = 1;
     }
  
-    for (int i = 1; i <= N; i++) {
-        for (int j = 1; j <= M; j++) {
+    for (int i = 1; i <= n; i++) {
+        for (int j = 1; j <= m; j++) {
             if (map[i][j] == 1 && visited[i][j] == 0) {
                 DFS(i, j);
                 v.push_back(s);
@@ -53,3 +58,10 @@ int main() {
     
     return 0;
 }
+```
+### 접근 방법
+
+- N*M 사이즈의 맵을 만들고 0으로 모두 채운다.
+- 입력으로 주어지는 음식물의 위치를 맵에 1로 채운다.
+- 음식물(1)을 기준으로 DFS 탐색을 하여 연결된 음식물을 찾는다.
+- 음식물 중 가장 큰 값을 출력한다.
