--- a/Second/1743/정연.md
+++ b/Second/1743/정연.md
@@ -8,7 +8,7 @@
 #include <algorithm>
 using namespace std;
  
-
+int n,m,k;
 int map[102][102];
 bool visited[102][102];
 int dy[] = { 0,0,-1,1 };
@@ -16,28 +16,27 @@ int dx[] = { 1,-1,0,0 };
 vector<int> v; 
 int s = 1; 
  
-void DFS(int y, int x) {
-    visited[y][x] = true;
+void DFS(int x, int y) {
+    visited[x][y] = true;
  
     for (int i = 0; i < 4; i++) {
-        int ny = y + dy[i];
         int nx = x + dx[i];
+        int ny = y + dy[i];
  
-        if (ny<0 || nx<0 || ny>N || nx>M)
+        if (ny<0 || nx<0 || ny>n || nx>m)
             continue;
-        if (map[ny][nx] == 1 && visited[ny][nx] == 0) {
-            visited[ny][nx] = true;
+        if (map[nx][ny] == 1 && visited[nx][ny] == 0) {
+            visited[nx][ny] = true;
             s++;
-            DFS(ny, nx);
+            DFS(nx, ny);
         }
     }
 }
  
  
 int main() {
-		int n,m,k;
     cin >> n >> m >> k;
-    for(int i=0;i i<= k ; i++){
+    for(int i=0; i<= k ; i++){
         int r, c;
         cin >> r >> c;
         map[r][c] = 1;
@@ -54,14 +53,13 @@ int main() {
     }
  
     sort(v.begin(), v.end(), greater<int>()); 
-    cout << v[0]; 
+    cout << v[0] << "\n"; 
     
     return 0;
 }
 ```
 ### 접근 방법
 
-- N*M 사이즈의 맵을 만들고 0으로 모두 채운다.
-- 입력으로 주어지는 음식물의 위치를 맵에 1로 채운다.
+- N*M 사이즈의 맵을 만들고 입력으로 주어지는 음식물의 위치를 맵에 1로 채운다.
 - 음식물(1)을 기준으로 DFS 탐색을 하여 연결된 음식물을 찾는다.
 - 음식물 중 가장 큰 값을 출력한다.
